--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "3.6.9",
+    "@apollo/react-components": "4.0.0",
     "@chakra-ui/react": "2.2.1",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
@@ -14,13 +16,14 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "framer-motion": "6.4.3",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^4.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "4.7.4",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
