--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.11.42",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "chakra-react-select": "4.1.4",
     "framer-motion": "6.4.3",
     "prettier": "2.7.1",
     "react": "18.2.0",
