--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "27.3.0",
+    "@ag-grid-community/core": "27.3.0",
+    "@ag-grid-community/react": "27.3.0",
+    "@ag-grid-community/styles": "27.3.0-beta.0",
     "@apollo/client": "3.6.9",
     "@apollo/react-components": "4.0.0",
     "@chakra-ui/react": "2.2.1",
@@ -10,9 +14,9 @@
     "@emotion/styled": "11.9.3",
     "@graphql-codegen/cli": "^2.9.0",
     "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.6.0",
     "@graphql-codegen/typescript-operations": "^2.4.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
-    "@graphql-codegen/typescript": "^2.6.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
