--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@graphql-codegen/typescript-operations": "^2.4.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@pfmanager/api-controller": "0.2.1",
+    "@pfmanager/utils": "0.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -33,6 +34,7 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-query": "^4.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
