--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@pfmanager/api-controller": "0.2.1",
     "@pfmanager/utils": "0.4.1",
+    "@pfmanager/types": "0.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.42",
+    "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "chakra-react-select": "4.1.4",
@@ -31,6 +33,7 @@
     "highcharts": "10.2.0",
     "highcharts-react-official": "3.1.0",
     "p-limit": "^4.0.0",
+    "papaparse": "^5.3.2",
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
