--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@graphql-codegen/typescript-operations": "^2.4.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@pfmanager/api-controller": "0.2.1",
-    "@pfmanager/utils": "0.4.1",
     "@pfmanager/types": "0.5.1",
+    "@pfmanager/utils": "0.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.0.5",
     "chakra-react-select": "4.1.4",
     "framer-motion": "6.4.3",
+    "graphql": "^16.6.0",
     "highcharts": "10.2.0",
     "highcharts-react-official": "3.1.0",
     "p-limit": "^4.0.0",
